Loading jsrsasign lib from internet, not local js file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	 <script language="JavaScript" type="text/javascript" src="js/jsrsasign-all-min.js"></script>
+	 <script language="JavaScript" type="text/javascript" src="https://kjur.github.io/jsrsasign/jsrsasign-all-min.js"></script>
     <title>Google IAP JWT generator and signer</title>
 
 <script language="JavaScript" type="text/javascript">
